feat: Add search bibliography by title, author or collection
