# swagger.json
@@ -699,10 +699,10 @@
         }
       }
     },
-    "/member/find": {
+    "/member/search": {
       "get": {
-        "summary": "Buscar por um membro",
-        "description": "Buscar um membro pelo número do cartão, nome ou email.",
+        "summary": "Buscar por membro(s)",
+        "description": "Buscar membro(s) pelo número do cartão, nome ou email.",
         "tags": ["Member"],
         "security": [
           {
@@ -713,7 +713,7 @@
           {
             "in": "query",
             "name": "method",
-            "required": true,
+            "required": false,
             "description": "Método de pesquisa (name, barcode, email)",
             "schema": {
               "type": "string",
@@ -723,7 +723,7 @@
           {
             "in": "query",
             "name": "data",
-            "required": true,
+            "required": false,
             "description": "Valor para buscar (nome, número do cartão ou email)",
             "schema": {
               "type": "string"
@@ -1325,6 +1325,69 @@
           },
           "422": {
             "description": "Erro ao registrar bibliografia"
+          }
+        }
+      }
+    },
+    "/biblio/search": {
+      "get": {
+        "summary": "Buscar por bibliografia(s)",
+        "description": "Buscar bibliografia(s) pelo número do cartão, nome ou email.",
+        "tags": ["Bibliography"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "method",
+            "description": "Método de pesquisa (title, author, collection)",
+            "schema": {
+              "type": "string",
+              "enum": ["title", "author", "collection"]
+            }
+          },
+          {
+            "in": "query",
+            "name": "data",
+            "description": "Valor para buscar (título, autor ou collection)",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Bibliografias encontradas com sucesso!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#components/schemas/SearchBibliosResponse"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Erro ao buscar a bibliografia",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "error"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Erro ao buscar bibliografia."
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -3725,6 +3788,99 @@
               "topic5": { "type": "string", "example": "American Fiction" },
               "last_change_userid": { "type": "number", "example": 12345 },
               "opac_flg": { "type": "boolean", "example": true }
+            }
+          }
+        }
+      },
+      "SearchBibliosResponse": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "example": "success"
+          },
+          "message": {
+            "type": "string",
+            "example": "Bibliografias encontradas com sucesso!"
+          },
+          "biblios": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "bibid": { "type": "number", "example": 1 },
+                "title": { "type": "string", "example": "Moby Dick" },
+                "title_remainder": {
+                  "type": "string",
+                  "example": "or, The Whale"
+                },
+                "author": { "type": "string", "example": "Herman Melville" },
+                "responsibility_stmt": {
+                  "type": "string",
+                  "example": "Written by Herman Melville"
+                },
+                "material_cd": { "type": "number", "example": 2 },
+                "collection_cd": { "type": "number", "example": 82 },
+                "call_nmbr1": { "type": "string", "example": "FIC" },
+                "call_nmbr2": { "type": "string", "example": "MEL" },
+                "call_nmbr3": { "type": "string", "example": "1851" },
+                "topic1": { "type": "string", "example": "Whaling" },
+                "topic2": { "type": "string", "example": "Adventure" },
+                "topic3": { "type": "string", "example": "Sea Stories" },
+                "topic4": { "type": "string", "example": "Classic Literature" },
+                "topic5": { "type": "string", "example": "American Fiction" },
+                "last_change_userid": { "type": "number", "example": 12345 },
+                "opac_flg": { "type": "boolean", "example": true },
+                "biblio_copy": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "number",
+                      "example": 1
+                    },
+                    "bibid": {
+                      "type": "number",
+                      "example": 1
+                    },
+                    "copyid": {
+                      "type": "number",
+                      "example": 1
+                    },
+                    "create_dt": {
+                      "type": "string",
+                      "example": "2024-10-14T13:17:09.686Z"
+                    },
+                    "copy_desc": {
+                      "type": "string",
+                      "example": "Primeira cópia do Moby Dick"
+                    },
+                    "barcode_nmbr": {
+                      "type": "string",
+                      "example": "1234"
+                    },
+                    "status_cd": {
+                      "type": "string",
+                      "example": "in"
+                    },
+                    "status_begin_dt": {
+                      "type": "string",
+                      "example": "2024-10-14T13:17:09.686Z"
+                    },
+                    "due_back_dt": {
+                      "type": "string",
+                      "example": "2024-10-30T13:17:09.686Z"
+                    },
+                    "mbrid": {
+                      "type": "number",
+                      "example": 1
+                    },
+                    "renewal_count": {
+                      "type": "number",
+                      "example": 0
+                    }
+                  }
+                }
+              }
             }
           }
         }
